@@ -6,6 +6,7 @@ python-reahl (4.1) unstable; urgency=low
  * Added UNDERSCORE.JS
  * Added current_url to Browser and deprecated older methods for compatibility with DriverBrowser. 
  * Changed nested_transaction to yield a TransactionVeto object.
+ * Changed Inputs to NOT automatically fix name clashes.
  
  -- Iwan Vosloo <iwan@reahl.org>  Thu, 1 Aug 2018 15:15:00 +0200
 
